src/test/ui/hygiene/local_inner_macros_disabled.stderr
error: cannot find macro `helper2!` in this scope
  --> $DIR/local_inner_macros_disabled.rs:19:1
   |
LL | public_macro!();
   | ^^^^^^^^^^^^^^^^
   |
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: aborting due to previous error

